--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,8 @@
 <div class="container">
-    
+    <img class="logo" src="/assets/Logo.png" alt="">
+    <ul class="nav-list">
+        <fa-icon class="menu" [icon]="faBars"/>
+        <li class="list-item"><a href="/about">Sobre</a></li>
+        <li class="list-item"><a href="/contact">Contato</a></li>
+    </ul>
 </div>
