--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -1,15 +1,61 @@
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 25px 0 25px 0;
-    margin: 0 auto;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 
-.slider-box{
-    width: 500px;
-    height: 613px;
-    max-width: 500px;
-    max-height: 613px;
-    border: 1px solid yellow;
+.slider-box {
+  position: relative;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7);
+  img {
+    display: none;
+    border-radius: 15px;
+    object-fit: contain;
+  }
+}
+
+.slider-box img.image-active {
+  display: block;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 2s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.slider-container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.slider-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  background-color: white;
+  
+  transition: opacity 0.6s ease;
+  opacity: 0.5;
+}
+
+.active,
+.slider-dot:hover {
+  opacity: 1;
 }
