--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -6,9 +6,14 @@
 }
 
 .slider-box {
+  width: 80vw;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   border-radius: 15px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7);
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.7);
   img {
     display: none;
     border-radius: 15px;
@@ -22,7 +27,8 @@
 
 .fade {
   animation-name: fade;
-  animation-duration: 2s;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes fade {
@@ -49,9 +55,8 @@
   width: 20px;
   height: 20px;
   border-radius: 20px;
-  background-color: white;
-  
-  transition: opacity 0.6s ease;
+  background-color: white;  
+  transition: opacity 0.6s ease-in-out;
   opacity: 0.5;
 }
 
