--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,5 @@
 }
 
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  overflow: hidden;
+  font-family: Roboto, "Helvetica Neue", sans-serif;overflow-y: hidden;
 }
