--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -36,6 +36,9 @@
   li:hover {
     color: rgb(134, 133, 133);
   }
+  img {
+    cursor: pointer;
+  }
 }
 
 .menu {
@@ -52,29 +55,6 @@
 .list-item {
   margin-left: 45px;
   cursor: pointer;
-}
-
-@media all and (max-width: 992px) {
-  .navbar {
-    justify-content: space-between;
-    padding: 0 20px 0 30px;
-  }
-  .menu {
-    display: block;
-  }
-  .list-item {
-    display: none;
-  }
-}
-
-@media all and (max-width: 600px) {
-  .navbar {
-    justify-content: space-between;
-    padding: 0 5px 0 5px;
-  }
-  .logo {
-    width: 150px;
-  }
 }
 
 .home {
@@ -191,11 +171,13 @@
 
 .contact {
   display: flex;
+  padding: 2rem 278px;
   flex-direction: column;
   justify-content: center;
   width: 100%;
   height: 100vh;
   background-color: black;
+  padding-top: 120px;
 }
 
 .box-contact {
@@ -203,18 +185,19 @@
   flex-direction: column;
   align-items: flex-end;
   width: 100%;
-  gap: 60px;
   figure {
     width: 473px;
     height: 613px;
-    background-color: #d9d9d9;
+    background: url("/assets/paisagem-5.png");
+    object-fit: cover;
   }
   footer {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-top: 100px;
     width: 100%;
-    span{
+    span {
       font-family: ABeeZee;
       line-height: normal;
       font-size: 32px;
@@ -229,4 +212,30 @@
   gap: 20px;
   color: white;
   font-size: xx-large;
+  fa-icon {
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 1024px) {
+  .navbar {
+    justify-content: space-between;
+    padding: 0 20px 0 30px;
+  }
+  .menu {
+    display: block;
+  }
+  .list-item {
+    display: none;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .navbar {
+    justify-content: space-between;
+    padding: 0 5px 0 5px;
+  }
+  .logo {
+    width: 150px;
+  }
 }
